--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = lxqt-sudo
-url = https://downloads.lxqt.org/downloads/lxqt-sudo/0.14.0/lxqt-sudo-0.14.0.tar.xz
+url = https://downloads.lxqt.org/downloads/lxqt-sudo/0.14.1/lxqt-sudo-0.14.1.tar.xz
 archives = 
 giturl = 
 
@@ -12,7 +12,7 @@ allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
@@ -54,5 +54,5 @@ use_clang = false
 # configure build for lto
 use_lto = false
 # require package verification for build
-verify_required = false
+verify_required = true
 
